--- a/src/Stact.Specs/packages.config
+++ b/src/Stact.Specs/packages.config
@@ -4,5 +4,6 @@
   <package id="Magnum.TestFramework" version="2.1.2" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="5.0.8" targetFramework="net40" />
   <package id="NUnit" version="2.6.3" targetFramework="net40" />
+  <package id="NUnit.Runners" version="2.6.3" targetFramework="net40" />
   <package id="RhinoMocks" version="3.6.1" targetFramework="net40" />
 </packages>
